# latte-dock

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  flake.nix  package.nix
app/: CMakeLists.txt  alternativeshelper.cpp  dbusreports.cpp  dbusreports.h  lattecorona.cpp  lattecorona.h  main.cpp  primaryoutputwatcher.cpp
containment/: CMakeLists.txt
containment/package/contents/ui/: BindingsExternal.qml  DragDropArea.qml  main.qml
containment/package/contents/ui/abilities/: AutoSize.qml  ParabolicEffect.qml
containment/package/contents/ui/abilities/privates/: ParabolicEffectPrivate.qml
containment/package/contents/ui/applet/: AppletItem.qml
containment/package/contents/ui/applet/colorizer/: Applet.qml
containment/package/contents/ui/background/: MultiLayered.qml
containment/package/contents/ui/colorizer/: CustomBackground.qml  Manager.qml
containment/package/contents/ui/editmode/: ConfigOverlay.qml
containment/package/contents/ui/layouts/loaders/: Tasks.qml
containment/plugin/: autosizestepper.cpp  autosizestepper.h  lattecontainmentplugin.cpp  layoutmanager.cpp  layoutmanager.h  maskgeometrybridge.cpp  maskgeometrybridge.h  plugins.qmltypes
containment/plugin/units/: autosizeengine.h  maskgeometry.h
docs/: PORTING_PLAN.md  QML_EXTRACTION_PLAN.md  REVIEW_NOTES.md  TESTING.md  captsilver-testability-adoption.md  dbus-interface-reference.md  dbus-observability-interface.md  e2e-interaction-test-plan.md  edit-mode-settings-audit-plan.md  known-defects.md  multi-distro-ci-plan.md  ng-upstream-audit.md  session-handoff.md  ub-catching-plan.md  (+1 more)
(+272 files in other folders)
